--- a/text/params.ini
+++ b/text/params.ini
@@ -2,15 +2,15 @@
 datasetname = reanalysis-era5-single-levels
 producttype =  reanalysis
 variable =  2m_temperature
-year = 1990
-month = 1:3
-day = 1,3,5
-time = 00:00-12:00
+year = 1990,1991
+month = 1
+day = 1:31
+time = 00:00-06:00
 pressurelevel = 0
-grid = 1.5,1.5
+grid = 1.75,1.75
 area = 90, -180, -90, 180
-statistic = mean
-frequency = day
+statistic = instantaneous
+frequency = hour
 outfilename = salida.nc
 
 # you can separate values with commas for 'FileIN' and 'Variable' parameters
