add output directory

--- a/text/params.ini
+++ b/text/params.ini
@@ -11,6 +11,6 @@ grid = 1.75,1.75
 area = 90, -180, -90, 180
 statistic = instantaneous
 frequency = hour
-outfilename = salida.nc
+outdir = /home/
 
 # you can separate values with commas for 'FileIN' and 'Variable' parameters
