--- a/parameters/params.ini
+++ b/parameters/params.ini
@@ -17,5 +17,13 @@ concatenate_files = No
 ncpus = 2 
 remove_temporal_files = no 
 
-# datasetname = may be 'reanalysis-era5-single-levels' or 'reanalysis-era5-land', etc 
+# datasetname = can be 'reanalysis-era5-single-levels' or 'reanalysis-era5-land', etc.
+# for more information check https://cds.climate.copernicus.eu/cdsapp#!/search?type=dataset
+# producttype = can be 'reanalysis', 'ensemble', etc
+# statistic = can be instantaneous, mean, accumulated, max, min, average, range, std, std1, var or var1
+# frequency = can be year, season, month, day or hour
+# filename = Name of the output file
+# outdir = output directory
+# concatenate_files = Should the output files be concatenated? (Yes, No)
 # ncpus = number of CPUs to use for the donwload and compute.
+# remove_temporal_files = Should temporal files be deleted?
